// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell sort direction is asc renders with a sort button in the right direction 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="h-10 py-2 border-none px-4 group hover:bg-gray"
          >
            <div
              class="flex items-center"
            >
              <div
                class="m-0 text-sm text-graphite font-inherit text-align"
              >
                Cell
              </div>
              <button
                aria-disabled="false"
                class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent ml-2 invisible group-hover:visible"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="items-center inline-flex font-semibold whitespace-nowrap text-button"
                >
                  <svg
                    class="fill-current inline-block text-inherit h-[1em] align-[-.125em] text-[1.2em] flex-1"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M7.5 1.793 11.207 5.5l-.707.707-2.5-2.5V14H7V3.707l-2.5 2.5-.707-.707 3-3 .707-.707Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TableCell sort direction is desc renders with a sort button in the right direction 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="h-10 py-2 border-none px-4 group hover:bg-gray"
          >
            <div
              class="flex items-center"
            >
              <div
                class="m-0 text-sm text-graphite font-inherit text-align"
              />
              <button
                aria-disabled="false"
                class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent ml-2 invisible group-hover:visible"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="items-center inline-flex font-semibold whitespace-nowrap text-button"
                >
                  <svg
                    class="fill-current inline-block text-inherit h-[1em] align-[-.125em] text-[1.2em] flex-1"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M8 2v10.293l2.5-2.5.707.707L7.5 14.207 3.793 10.5l.707-.707 2.5 2.5V2h1Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
